feat: SSE streaming implementation and Continue setup documentation
- Implement SSE streaming for Continue IDE compatibility
- Add continue-config-reference.yaml for setup reference
- Add CONTINUE_SETUP.md with setup instructions
- Update README.md with project overview
- Add comprehensive documentation and troubleshooting guides
- Update .gitignore to exclude personal secrets
- All models now use stream: true for proper UI display
- Add new test scripts and deployment utilities

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,9 @@ build/
 deploy-with-token.bat
 *.key
 *.pem
+current-secrets.txt
+
+# Continue設定（個人固有）
+.continue-config-local.yaml
+continue-config-private.yaml
 
