--- a/docs/continue-config-reference.yaml
+++ b/docs/continue-config-reference.yaml
@@ -4,7 +4,7 @@ models:
   - name: "Overall Architect"
     provider: "openai"
     model: "overall_architect"
-    apiBase: "https://ndiwsfzozeudtenshwgx.supabase.co/functions/v1/llm-proxy-openai"
+    apiBase: "https://mypgnzvxsryhzhqhjzlo3xsaze0gvkgp.lambda-url.ap-northeast-1.on.aws"
     apiKey: "sk-dummy-key-not-required"
     contextLength: 8192
     template: "あなたはシステム全体の仕様統括の専門家です。システム全体の設計、統括、アーキテクチャの意思決定について詳しく回答してください。\n\n{{message}}"
@@ -13,15 +13,19 @@ models:
       temperature: 0.3
       maxTokens: 2000
     requestOptions:
-      timeout: 60000
+      timeout: 900000
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
+        "X-User-Id": "${env:USERNAME}"
+        "X-Windows-User": "${env:USERNAME}"
+        "X-Machine-Name": "${env:COMPUTERNAME}"
+        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
 
   - name: "Frontend Architect"
     provider: "openai"
     model: "frontend_architect"
-    apiBase: "https://ndiwsfzozeudtenshwgx.supabase.co/functions/v1/llm-proxy-openai"
+    apiBase: "https://mypgnzvxsryhzhqhjzlo3xsaze0gvkgp.lambda-url.ap-northeast-1.on.aws"
     apiKey: "sk-dummy-key-not-required"
     contextLength: 8192
     template: "あなたはフロントエンドアーキテクトの専門家です。React、Vue、Angularなどのフロントエンドフレームワークの設計、パフォーマンス最適化、ユーザーエクスペリエンスの向上について詳しく回答してください。\n\n{{message}}"
@@ -30,15 +34,19 @@ models:
       temperature: 0.3
       maxTokens: 2000
     requestOptions:
-      timeout: 60000
+      timeout: 900000
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
+        "X-User-Id": "${env:USERNAME}"
+        "X-Windows-User": "${env:USERNAME}"
+        "X-Machine-Name": "${env:COMPUTERNAME}"
+        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
 
   - name: "Frontend Developer"
     provider: "openai"
     model: "frontend_developer"
-    apiBase: "https://ndiwsfzozeudtenshwgx.supabase.co/functions/v1/llm-proxy-openai"
+    apiBase: "https://mypgnzvxsryhzhqhjzlo3xsaze0gvkgp.lambda-url.ap-northeast-1.on.aws"
     apiKey: "sk-dummy-key-not-required"
     contextLength: 8192
     template: "あなたはフロントエンド開発者の専門家です。HTML、CSS、JavaScript、TypeScriptを使った実装コンポーネント設計、スタイリング、レスポンシブデザインについて詳しく回答してください。\n\n{{message}}"
@@ -47,15 +55,19 @@ models:
       temperature: 0.3
       maxTokens: 2000
     requestOptions:
-      timeout: 60000
+      timeout: 900000
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
+        "X-User-Id": "${env:USERNAME}"
+        "X-Windows-User": "${env:USERNAME}"
+        "X-Machine-Name": "${env:COMPUTERNAME}"
+        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
 
   - name: "Backend Architect"
     provider: "openai"
     model: "backend_architect"
-    apiBase: "https://ndiwsfzozeudtenshwgx.supabase.co/functions/v1/llm-proxy-openai"
+    apiBase: "https://mypgnzvxsryhzhqhjzlo3xsaze0gvkgp.lambda-url.ap-northeast-1.on.aws"
     apiKey: "sk-dummy-key-not-required"
     contextLength: 8192
     template: "あなたはバックエンドアーキテクトの専門家です。API設計、データベース設計、マイクロサービス、スケーラビリティ、セキュリティについて詳しく回答してください。\n\n{{message}}"
@@ -64,15 +76,19 @@ models:
       temperature: 0.3
       maxTokens: 2000
     requestOptions:
-      timeout: 60000
+      timeout: 900000
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
+        "X-User-Id": "${env:USERNAME}"
+        "X-Windows-User": "${env:USERNAME}"
+        "X-Machine-Name": "${env:COMPUTERNAME}"
+        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
 
   - name: "Backend Developer"
     provider: "openai"
     model: "backend_developer"
-    apiBase: "https://ndiwsfzozeudtenshwgx.supabase.co/functions/v1/llm-proxy-openai"
+    apiBase: "https://mypgnzvxsryhzhqhjzlo3xsaze0gvkgp.lambda-url.ap-northeast-1.on.aws"
     apiKey: "sk-dummy-key-not-required"
     contextLength: 8192
     template: "あなたはバックエンド開発者の専門家です。Node.js、Python、Java、Goなどのサーバーサイド実装、API開発、データベース操作について詳しく回答してください。\n\n{{message}}"
@@ -81,15 +97,19 @@ models:
       temperature: 0.3
       maxTokens: 2000
     requestOptions:
-      timeout: 60000
+      timeout: 900000
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
+        "X-User-Id": "${env:USERNAME}"
+        "X-Windows-User": "${env:USERNAME}"
+        "X-Machine-Name": "${env:COMPUTERNAME}"
+        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
 
   - name: "QA Research"
     provider: "openai"
     model: "qa_research"
-    apiBase: "https://ndiwsfzozeudtenshwgx.supabase.co/functions/v1/llm-proxy-openai"
+    apiBase: "https://mypgnzvxsryhzhqhjzlo3xsaze0gvkgp.lambda-url.ap-northeast-1.on.aws"
     apiKey: "sk-dummy-key-not-required"
     contextLength: 8192
     template: "あなたはQA・技術調査の専門家です。テスト設計、品質保証、技術調査、問題解決、ドキュメント作成について詳しく回答してください。\n\n{{message}}"
@@ -98,15 +118,19 @@ models:
       temperature: 0.3
       maxTokens: 2000
     requestOptions:
-      timeout: 60000
+      timeout: 900000
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
+        "X-User-Id": "${env:USERNAME}"
+        "X-Windows-User": "${env:USERNAME}"
+        "X-Machine-Name": "${env:COMPUTERNAME}"
+        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
 
   - name: "Infrastructure"
     provider: "openai"
     model: "infrastructure"
-    apiBase: "https://ndiwsfzozeudtenshwgx.supabase.co/functions/v1/llm-proxy-openai"
+    apiBase: "https://mypgnzvxsryhzhqhjzlo3xsaze0gvkgp.lambda-url.ap-northeast-1.on.aws"
     apiKey: "sk-dummy-key-not-required"
     contextLength: 8192
     template: "あなたはインフラ環境設計・構築の専門家です。Docker、Kubernetes、AWS、Azure、GCP、CI/CD、監視、セキュリティについて詳しく回答してください。\n\n{{message}}"
@@ -115,7 +139,7 @@ models:
       temperature: 0.3
       maxTokens: 2000
     requestOptions:
-      timeout: 60000
+      timeout: 900000
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
@@ -123,8 +147,16 @@ models:
   - name: "Test"
     provider: "openai"
     model: "backend_developer"
-    apiBase: "https://ndiwsfzozeudtenshwgx.supabase.co/functions/v1/llm-proxy-openai"
+    apiBase: "https://mypgnzvxsryhzhqhjzlo3xsaze0gvkgp.lambda-url.ap-northeast-1.on.aws"
     apiKey: "sk-dummy-key-not-required"
     stream: true
     completionOptions:
       maxTokens: 4000
+    requestOptions:
+      headers:
+        "User-Agent": "continue-client"
+        "Content-Type": "application/json"
+        "X-User-Id": "${env:USERNAME}"
+        "X-Windows-User": "${env:USERNAME}"
+        "X-Machine-Name": "${env:COMPUTERNAME}"
+        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
