Continue IDEの環境変数参照を標準機能に変更
- Continue IDEの標準機能（${{ secrets.* }}）を使用して環境変数を参照するように変更
- docs/continue-config-reference.yamlの環境変数参照形式を${env:USERNAME}から${{ secrets.USERNAME }}に更新
- ユーザーのconfig.yamlも同形式に更新
- docs/CONTINUE_SETUP.mdを更新し、標準機能の使用方法を記載
- 不要になったPowerShellスクリプト（環境変数展開用）を削除
- Lambda関数にデバッグログを追加（環境変数の展開確認用）

これにより、各ユーザーがContinue IDEを設定すれば、それぞれのユーザー情報（USERNAME、COMPUTERNAME、USERDOMAIN）が自動的に記録されるようになりました。追加のスクリプト実行やタスクスケジューラの設定は不要です。

--- a/docs/continue-config-reference.yaml
+++ b/docs/continue-config-reference.yaml
@@ -17,10 +17,10 @@ models:
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
-        "X-User-Id": "${env:USERNAME}"
-        "X-Windows-User": "${env:USERNAME}"
-        "X-Machine-Name": "${env:COMPUTERNAME}"
-        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
+        "X-User-Id": "${{ secrets.USERNAME }}"
+        "X-Windows-User": "${{ secrets.USERNAME }}"
+        "X-Machine-Name": "${{ secrets.COMPUTERNAME }}"
+        "X-Windows-Account": "${{ secrets.USERDOMAIN }}\\${{ secrets.USERNAME }}"
 
   - name: "Frontend Architect"
     provider: "openai"
@@ -38,10 +38,10 @@ models:
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
-        "X-User-Id": "${env:USERNAME}"
-        "X-Windows-User": "${env:USERNAME}"
-        "X-Machine-Name": "${env:COMPUTERNAME}"
-        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
+        "X-User-Id": "${{ secrets.USERNAME }}"
+        "X-Windows-User": "${{ secrets.USERNAME }}"
+        "X-Machine-Name": "${{ secrets.COMPUTERNAME }}"
+        "X-Windows-Account": "${{ secrets.USERDOMAIN }}\\${{ secrets.USERNAME }}"
 
   - name: "Frontend Developer"
     provider: "openai"
@@ -59,10 +59,10 @@ models:
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
-        "X-User-Id": "${env:USERNAME}"
-        "X-Windows-User": "${env:USERNAME}"
-        "X-Machine-Name": "${env:COMPUTERNAME}"
-        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
+        "X-User-Id": "${{ secrets.USERNAME }}"
+        "X-Windows-User": "${{ secrets.USERNAME }}"
+        "X-Machine-Name": "${{ secrets.COMPUTERNAME }}"
+        "X-Windows-Account": "${{ secrets.USERDOMAIN }}\\${{ secrets.USERNAME }}"
 
   - name: "Backend Architect"
     provider: "openai"
@@ -80,10 +80,10 @@ models:
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
-        "X-User-Id": "${env:USERNAME}"
-        "X-Windows-User": "${env:USERNAME}"
-        "X-Machine-Name": "${env:COMPUTERNAME}"
-        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
+        "X-User-Id": "${{ secrets.USERNAME }}"
+        "X-Windows-User": "${{ secrets.USERNAME }}"
+        "X-Machine-Name": "${{ secrets.COMPUTERNAME }}"
+        "X-Windows-Account": "${{ secrets.USERDOMAIN }}\\${{ secrets.USERNAME }}"
 
   - name: "Backend Developer"
     provider: "openai"
@@ -101,10 +101,10 @@ models:
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
-        "X-User-Id": "${env:USERNAME}"
-        "X-Windows-User": "${env:USERNAME}"
-        "X-Machine-Name": "${env:COMPUTERNAME}"
-        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
+        "X-User-Id": "${{ secrets.USERNAME }}"
+        "X-Windows-User": "${{ secrets.USERNAME }}"
+        "X-Machine-Name": "${{ secrets.COMPUTERNAME }}"
+        "X-Windows-Account": "${{ secrets.USERDOMAIN }}\\${{ secrets.USERNAME }}"
 
   - name: "QA Research"
     provider: "openai"
@@ -122,10 +122,10 @@ models:
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
-        "X-User-Id": "${env:USERNAME}"
-        "X-Windows-User": "${env:USERNAME}"
-        "X-Machine-Name": "${env:COMPUTERNAME}"
-        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
+        "X-User-Id": "${{ secrets.USERNAME }}"
+        "X-Windows-User": "${{ secrets.USERNAME }}"
+        "X-Machine-Name": "${{ secrets.COMPUTERNAME }}"
+        "X-Windows-Account": "${{ secrets.USERDOMAIN }}\\${{ secrets.USERNAME }}"
 
   - name: "Infrastructure"
     provider: "openai"
@@ -156,7 +156,7 @@ models:
       headers:
         "User-Agent": "continue-client"
         "Content-Type": "application/json"
-        "X-User-Id": "${env:USERNAME}"
-        "X-Windows-User": "${env:USERNAME}"
-        "X-Machine-Name": "${env:COMPUTERNAME}"
-        "X-Windows-Account": "${env:USERDOMAIN}\\${env:USERNAME}"
+        "X-User-Id": "${{ secrets.USERNAME }}"
+        "X-Windows-User": "${{ secrets.USERNAME }}"
+        "X-Machine-Name": "${{ secrets.COMPUTERNAME }}"
+        "X-Windows-Account": "${{ secrets.USERDOMAIN }}\\${{ secrets.USERNAME }}"
